# minecraft-clone

./: CMakeLists.txt  README.md
include/: cubemap.h  quad.h
lib/FastNoiseLite/: FastNoiseLite.h
lib/stb/: stb_image.h  stb_image_write.h
oldsrc/: camera.cpp  camera.h  entity.h  main.cpp  player.cpp  shader.cpp  shader.h
oldsrc/rendering/: fbo.cpp  fbo.h  renderer.cpp  vao.cpp  vao.h  vbo.cpp  vbo.h
oldsrc/shaders/: main.fs  main.vs  water.fs  water.vs
oldsrc/terrain/: block.h  chunk.cpp  chunk.h  world.cpp  world.h
src/: block.h  camera.cpp  camera.h  chunk.cpp  chunk.h  entity.h  main.cpp  player.h  shader.cpp  shader.h  state.h  texture.cpp  texture.h  window.cpp  window.h  world.cpp  world.h
src/rendering/: renderer.cpp  renderer.h  vao.cpp  vao.h  vbo.cpp  vbo.h
src/shaders/: main.fs  main.vs  skybox.fs  skybox.vs  water.fs  water.vs
src/terrain/: block.cpp  block.h  chunk.cpp  chunk.h  world.cpp  world.h
